--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@reduxjs/toolkit": "^1.3.6",
-    "classnames": "^2.2.6",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "moment": "^2.26.0",
-    "rewire": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
     "redux-localstorage-simple": "^2.2.0",
+    "rewire": "^5.0.0",
     "typeface-roboto": "0.0.75",
     "uuid": "^8.1.0"
   },
@@ -47,8 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.141",
     "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@types/lodash": "^4.14.141",
     "autoprefixer": "^9.8.0",
     "express": "^4.17.1",
     "postcss-cli": "^7.1.1",
